[project]
name = "reskpoints"
version = "0.1.1"
description = "Agent Action Logging Platform — log all AI/LLM agent actions to any platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "RESK Security"}]
keywords = ["agent", "llm", "ai", "logging", "monitoring", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
all = ["reskpoints[webhook,datadog,prometheus,opentelemetry]"]
resklogits = ["resklogits>=0.2.0"]
webhook = []
datadog = ["datadog-api-client>=2.0"]
prometheus = ["prometheus-client>=0.19"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
slack = ["httpx>=0.27.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Resk-Security/ReskPoints"
Repository = "https://github.com/Resk-Security/ReskPoints"

[project.scripts]
reskpoints = "reskpoints.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reskpoints"]
include = [
    "/src/reskpoints/**/*.py",
    "/src/reskpoints/py.typed",
    "reskpoints.yaml",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/reskpoints.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = false
